--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/77topup_icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>77TopUp - Topup Game Cepat dan Murah</title>
+
+    <!-- <script 
+  type="text/javascript"
+  src="https://app.sandbox.midtrans.com/snap/snap.js"
+  data-client-key="SB-Mid-client-xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"> 
+</script> -->
   </head>
   <body>
     <div id="root"></div>
